--- a/gardenCenter/src/app/app.component.html
+++ b/gardenCenter/src/app/app.component.html
@@ -1,3 +1,4 @@
-<h1>
-  {{title}}
-</h1>
+<gc-sensor [gardenName]="'Left Veggie Garden'"></gc-sensor>
+<gc-sensor [gardenName]="'Middle Veggie Garden'"></gc-sensor>
+<gc-sensor [gardenName]="'Right Veggie Garden'"></gc-sensor>
+<gc-sensor [gardenName]="'Best Veggies Ever'"></gc-sensor>
