--- a/gardenCenter/src/app/app.component.html
+++ b/gardenCenter/src/app/app.component.html
@@ -1,4 +1,6 @@
+<router-outlet></router-outlet>
 <gc-sensor [gardenName]="'Left Veggie Garden'" [sensorPin]="'A0'"></gc-sensor>
 <gc-sensor [gardenName]="'Middle Veggie Garden'"></gc-sensor>
 <gc-sensor [gardenName]="'Right Veggie Garden'"></gc-sensor>
 <gc-sensor [gardenName]="'Best Veggies Ever'"></gc-sensor>
+
