--- a/gardenCenter/src/app/shared/sensor/garden-sensor.component.html
+++ b/gardenCenter/src/app/shared/sensor/garden-sensor.component.html
@@ -3,7 +3,7 @@
   <div class="panel-body">
     <div class="data-panel text-centre">
       <div class="reading-wrapper">
-        <p class="reading-result">{{sensorReading.moisture_level}}</p>
+        <p class="reading-result">{{sensorReading?.moisture_level}}</p>
         <span [ngClass]="iconArrow" class="text-small" aria-hidden="true"></span>
       </div>
       <div>
